--- a/Scedule 2/View/Base.lproj/Main.storyboard
+++ b/Scedule 2/View/Base.lproj/Main.storyboard
@@ -132,6 +132,9 @@
                             <barButtonItem title="Item" image="person.fill.xmark.rtl" catalog="system" id="Bbm-5R-FNo"/>
                         </rightBarButtonItems>
                     </navigationItem>
+                    <connections>
+                        <segue destination="zDe-CH-Z9n" kind="show" identifier="segueToAddName" id="1Mp-0X-xZJ"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oUU-hs-qVY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -800,6 +803,9 @@
             <point key="canvasLocation" x="2070" y="-1493"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="1Mp-0X-xZJ"/>
+    </inferredMetricsTieBreakers>
     <resources>
         <image name="doc.badge.gearshape.fill" catalog="system" width="122" height="128"/>
         <image name="list.dash" catalog="system" width="128" height="85"/>
